[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = "2.1.0"
cw-storage-plus = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
cw-multi-test = { version="2.1.0", optional=true }

[dev-dependencies]
cw-multi-test = "2.1.0"
